--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </section>
 
 <footer>
-	<small>Site by <a href="http://www.gnportfolio.com">Gus Nordhielm</a> - lauched December 2016.</small>
+	<small>Site by <a href="http://www.gnportfolio.com">Gus Nordhielm</a> - launched December 2016.</small>
 </footer>
 </div>
 
